--- a/css/style.css
+++ b/css/style.css
@@ -260,8 +260,8 @@ header {
 
 .img-1 {
     margin-top: 5em;
-    margin-left: -4.5em;
-    width: 100%;
+    margin-left: 0.5em;
+    width: 80%
 }
 
 .content-wrapper {
@@ -276,9 +276,10 @@ header {
 .content-wrapper h4 {
     font-size: 24px;
     padding-right: 6em;
-    margin-top: 1em;
+    margin-top: 0.3em;
 }
 .content-wrapper p {
+    margin-top: -1.5em;
     margin-top: -1em;
     padding: .2em 0em;
 }
@@ -292,7 +293,8 @@ header {
 }
 
 .card-img {
-    margin-top: 4em;
+    margin-top: 2em;
+    width: 55%
 }
 
 .wrapper-2 {
